--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "美co子打卡小程序",
   "main": "app.js",
   "scripts": {
-    "prettier": "prettier --write ./src/**/*.{js,wxs,wxml,wxss,json} *.{js,wxs,wxml,wxss,json}"
+    "prettier": "prettier --write ./**/*.{js,wxs,wxml,wxss,json} *.{js,wxs,wxml,wxss,json}"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "moment": "^2.24.0",
     "prettier": "2.0.5",
     "prettier-eslint-cli": "5.0.0"
+  },
+  "dependencies": {
+    "@vant/weapp": "^1.10.4"
   }
 }
