--- a/app.json
+++ b/app.json
@@ -24,6 +24,9 @@
       }
     ]
   },
+  "usingComponents": {
+    "van-toast": "@vant/weapp/toast/index"
+  },
   "resolveAlias": {
     "@/*": "/*"
   },
